Add documentation for agent and resource entities in Sugarscape simulation